Bugfix- Text Overflow problems in demo

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,6 +83,7 @@ ul{
 	-webkit-border-radius:5px;
 	-webkit-box-shadow: 2px 2px 10px #888888;
 	background-color:#F8F8F8;
+	overflow: scroll;
 }
 
 .panel-top{
